--- a/index.html
+++ b/index.html
@@ -526,12 +526,12 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Image13" style="display:inline-block;width:100%;height:auto;z-index:82;">
-<a href="./Career-timelines.html"><img src="images/Admission Alert (1) (1)edit.png" id="Image13" alt=""></a>
+<a href="./Government-help.html"><img src="images/Admission Alert (1) (1)edit.png" id="Image13" alt=""></a>
 </div>
 <div id="wb_Image2" style="display:inline-block;width:100%;height:auto;z-index:83;">
 <a href="./Government-help.html"><img src="govt_schemes.webp" id="Image2" alt="" width="263" height="163"></a>
 </div>
-<a id="Button20" href="./Career-timelines.html" style="display:block;width: 100%;;height:49px;z-index:84;">Govt. Help</a>
+<a id="Button20" href="./Government-help.html" style="display:block;width: 100%;;height:49px;z-index:84;">Govt. Help</a>
 </div>
 </div>
 </div>
@@ -543,7 +543,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Image18" style="display:inline-block;width:100%;height:auto;z-index:86;">
-<a href="./Career-timelines.html"><img src="images/pngkey.com-explicit-content-png-4386721.png" id="Image18" alt=""></a>
+<a href="./Government-help.html"><img src="images/pngkey.com-explicit-content-png-4386721.png" id="Image18" alt=""></a>
 </div>
 <div id="wb_Image29" style="display:inline-block;width:100%;height:auto;z-index:87;">
 <a href="./Parental-Guidance.html"><img src="parental_guidance.webp" id="Image29" alt="" width="263" height="163"></a>
@@ -560,7 +560,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Image20" style="display:inline-block;width:100%;height:auto;z-index:90;">
-<a href="./Career-timelines.html"><img src="images/occupation.png" id="Image20" alt=""></a>
+<a href="./Government-help.html"><img src="images/occupation.png" id="Image20" alt=""></a>
 </div>
 <div id="wb_Image30" style="display:inline-block;width:100%;height:auto;z-index:91;">
 <a href="./Others-career.html"><img src="occupation.webp" id="Image30" alt="" width="263" height="154"></a>
