--- a/Lists.html
+++ b/Lists.html
@@ -999,7 +999,7 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div class="row">
 <div class="col-1">
 <div id="wb_Heading42" style="display:inline-block;width:100%;z-index:344;">
-<h2 id="Heading42"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRB2VazZximYd8_SaFlkTJOAy-_4P_YSUovj4BPPJZ-pvm9tiFG2g0pPUCWPL860MX94h0aNExxZl3j/pubhtml?gid=851852035&single=true">समयदानी </a></h2>
+<h2 id="Heading42"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQprK75ceZw_4AIWdW9HxRNpa9wVYgN0BN1-fzTtaaz9wQi-DI1vu80No2A1dgu59CnyegnMsFB7l4S/pubhtml">जिलेवार समयदानी</a></h2>
 </div>
 </div>
 </div>
