--- a/Our-partners.html
+++ b/Our-partners.html
@@ -358,6 +358,33 @@
 </div>
 </div>
 </div>
+
+<div id="wb_LayoutGrid22">
+<div id="LayoutGrid22">
+<div class="row">
+<div class="col-1">
+<div id="wb_LayoutGrid19">
+<div id="LayoutGrid19">
+<div class="row">
+<div class="col-1">
+<div id="wb_Heading7" style="display:inline-block;width:100%;z-index:49;">
+<h2 id="Heading7"><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRyDd9F-ymg1n-mCmGYD9uaI0wPOZu_6XO5_TFX7e41PZ1tADfHENQah-8RYSQNr0Ht8BFcUOBnpBP5/pubhtml">सदस्यता सूची</a></h2>
+</div>
+<div id="wb_Image5" style="display:inline-block;width:100%;height:auto;z-index:50;">
+<a href="./MP-board.html"><img src="images/iuhqkenl.png" id="Image5" alt="" title="MP"></a>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+
+
+
+    
 <div id="wb_LayoutGrid34">
 <div id="LayoutGrid34">
 <div class="row">
