--- a/media.html
+++ b/media.html
@@ -243,14 +243,12 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <div id="LayoutGrid19">
 <div class="row">
 <div class="col-1">
-<div id="wb_Image3" style="display:inline-block;width:100%;height:auto;z-index:19;">
-<a href="https://drive.google.com/drive/folders/1_Zhhporw7DBvrmXLZ4E5dyROO4gKaoo0?usp=sharing"><img src="images/2018_05_29__20_37_36_1.jpg" id="Image3" alt="" title="2018"></a>
-</div>
+
 <div id="wb_Image2" style="display:inline-block;width:100%;height:auto;z-index:20;">
-<a href="https://drive.google.com/drive/folders/1ZVGaDtoQ10lO-CIMU1ZZuuO71Phk1wNi?usp=sharing" target="_blank" title="2018 to 2023"><img src="2.webp" id="Image2" alt="" width="890" height="712"></a>
+<a href="https://drive.google.com/drive/folders/1cWb9OXGhdeiZlmdnCCd_MFUBcXA096LQ?usp=sharing" target="_blank" title="2018 to 2023"><img src="2.webp" id="Image2" alt="" width="890" height="712"></a>
 </div>
 <div id="wb_Text4">
-<p><a href="https://drive.google.com/drive/folders/1ZVGaDtoQ10lO-CIMU1ZZuuO71Phk1wNi?usp=sharing" target="_blank">2018-2023</a></p>
+<p><a href="https://drive.google.com/drive/folders/1cWb9OXGhdeiZlmdnCCd_MFUBcXA096LQ?usp=sharing" target="_blank">2018-2023</a></p>
 </div>
 </div>
 </div>
@@ -264,18 +262,39 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 </div>
 </div>
 </div>
+<div id="wb_LayoutGrid19">
+   <div id="LayoutGrid19">
+   <div class="row">
+   <div class="col-1">
+
+   <div id="wb_Image2" style="display:inline-block;width:100%;height:auto;z-index:20;">
+   <a href="https://drive.google.com/drive/folders/17XDz8zFaUul2la2VmdEBx5Q6_9KeQYOX?usp=sharing" target="_blank" title="2024"><img src="2024media.png" id="Image2" alt="" width="890" height="712"></a>
+   </div>
+   <div id="wb_Text4">
+   <p><a href="https://drive.google.com/drive/folders/17XDz8zFaUul2la2VmdEBx5Q6_9KeQYOX?usp=sharing" target="_blank">2024</a></p>
+   </div>
+   </div>
+   </div>
+   </div>
+   </div>
+   <div id="wb_LayoutGrid37">
+   <div id="LayoutGrid37">
+   <div class="row">
+   <div class="col-1">
+   </div>
+   </div>
+   </div>
+   </div>
 <div id="wb_LayoutGrid33">
 <div id="LayoutGrid33">
 <div class="row">
 <div class="col-1">
-<div id="wb_Image5" style="display:inline-block;width:100%;height:auto;z-index:22;">
-<a href="https://drive.google.com/drive/folders/1h8BBoW-70q7bqT7TKbhNFp07GDsG-YNf?usp=sharing"><img src="images/2019_05_09__13_04_57_1.jpg" id="Image5" alt="" title="Proposed Bhawan Map by Abhishek Mohariya"></a>
-</div>
+
 <div id="wb_Image7" style="display:inline-block;width:100%;height:auto;z-index:23;">
-<a href="https://drive.google.com/drive/folders/1BuFmCe3oWTBDQEkXDrfH_q8xo1L0LhhF?usp=sharing" target="_blank"><img src="2024toPresent.webp" id="Image7" alt="" title="pic google drive" width="890" height="688"></a>
+<a href="https://drive.google.com/drive/folders/1BuFmCe3oWTBDQEkXDrfH_q8xo1L0LhhF?usp=sharing" target="_blank"><img src="2025toPresent.png" id="Image7" alt="" title="2025-Present(वर्तमान) pic google drive" width="890" height="688"></a>
 </div>
 <div id="wb_Text8">
-<p><a href="https://drive.google.com/drive/folders/1BuFmCe3oWTBDQEkXDrfH_q8xo1L0LhhF?usp=sharing" target="_blank">2024-Present(वर्तमान)</a></p>
+<p><a href="https://drive.google.com/drive/folders/1BuFmCe3oWTBDQEkXDrfH_q8xo1L0LhhF?usp=sharing" target="_blank">2025-Present(वर्तमान)</a></p>
 </div>
 </div>
 </div>
@@ -556,4 +575,5 @@ We are dedicated to empower people with the tools and knowledge they need to rea
 <script data-goatcounter="https://6264390100.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 </body>
+
 </html>
